# Schema-Change-Detector

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DOCUMENTATION-BR.md  DOCUMENTATION.md  Makefile  README-BR.md  README-br.md  README.md  arquivos.py  cli.py  driftbrake.example.yml  pyproject.toml  requirements.txt  schema.lock.json  teste_relatorio.html
.github/workflows/: ci.yml
config/: config.yaml
detect/: pyvenv.cfg
docs/: AUDIT-br.md  AUDIT.md  DOCUMENTATION-BR.md  DOCUMENTATION-br.md  DOCUMENTATION.md
docs/LOGS/: CHANGELOG-BR.md  CHANGELOG.md
examples/airflow/: schema_check_dag.py
examples/dbt/: check_before_run.sh
examples/github_actions/: schema-check.yml
examples/simple_pipeline/: pipeline.py
fonte/: TODO  __init__.py  armazenamento.py  capt.py  classificador.py  comparador.py  exportador.py  relator.py  relatorio.py
historico/: categories_2026-02-02_01-10-27.json  categories_2026-02-02_15-57-46.json  categories_2026-02-04 16:42:18.563051.json  categories_2026-02-05 21:28:03.759814.json  categories_DEPOIS_4x.json  categories_DEPOIS_5x.json  categories_em_execucao.json  categories_para_analise.json  clientes_teste_2026-02-04 16:42:18.563051.json  clientes_teste_2026-02-05 21:28:03.759814.json  clientes_teste_DEPOIS_4x.json  clientes_teste_DEPOIS_5x.json  clientes_teste_em_execucao.json  clientes_teste_para_analise.json  customers_2026-02-02_01-10-27.json  customers_2026-02-02_15-57-46.json  customers_2026-02-04 16:42:18.563051.json  customers_2026-02-05 21:28:03.759814.json  customers_DEPOIS_4x.json  customers_DEPOIS_5x.json  customers_em_execucao.json  customers_para_analise.json  departments_2026-02-02_01-10-27.json  departments_2026-02-02_15-57-46.json  departments_2026-02-04 16:42:18.563051.json  departments_2026-02-05 21:28:03.759814.json  departments_DEPOIS_4x.json  departments_DEPOIS_5x.json  departments_em_execucao.json  departments_para_analise.json  order_detail_v_2026-02-04 16:42:18.563051.json  order_detail_v_2026-02-05 21:28:03.759814.json  order_detail_v_DEPOIS_4x.json  order_detail_v_DEPOIS_5x.json  order_detail_v_em_execucao.json  order_detail_v_para_analise.json  order_items_2026-02-02_01-10-27.json  order_items_2026-02-02_15-57-46.json  order_items_2026-02-04 16:42:18.563051.json  order_items_2026-02-05 21:28:03.759814.json  (+20 more)
relatorios/: mudancas.py  relatorio_categories_2026-02-16_20-32-14.html  relatorio_clientes_teste_2026-02-16_20-32-14.html  relatorio_consolidado_2026-02-24_22-54-02.html  relatorio_consolidado_2026-02-24_23-04-28.html  relatorio_consolidado_2026-02-24_23-06-40.html  relatorio_consolidado_2026-02-24_23-13-57.html  relatorio_consolidado_2026-02-24_23-15-04.html  relatorio_consolidado_2026-02-25_13-56-11.html  relatorio_consolidado_2026-02-25_13-59-15.html  relatorio_consolidado_2026-02-26_13-07-55.html  relatorio_customers_2026-02-16_20-32-14.html  relatorio_departments_2026-02-16_20-32-14.html  relatorio_order_detail_v_2026-02-16_20-32-14.html  relatorio_order_items_2026-02-16_20-32-14.html  relatorio_orders_2026-02-16_20-32-14.html  relatorio_products_2026-02-16_20-32-14.html
src/driftbrake/: __init__.py  cli.py  decision.py  driftbrake.py  exceptions.py  guard.py  models.py  policy.py  prompters.py  protocols.py
src/driftbrake/classifiers/: __init__.py  impact_classifier.py  type_compatibility.py
src/driftbrake/comparators/: __init__.py  schema_comparator.py
src/driftbrake/config/: __init__.py  settings.py
src/driftbrake/contracts/: __init__.py  loader.py  writer.py
src/driftbrake/readers/: __init__.py  base.py  json_reader.py  postgres.py
src/driftbrake/reporters/: __init__.py  facade_terminal.py  html_report.py  json_report.py  markdown_report.py  (+1 more)
templates/: base.html  relatorio.html  secao.html  secao_breaking.html  secao_safe.html  tabela.html
testes/: teste_capt.py  teste_classific.py  teste_comp.py
tests/fixtures/: schema_after.json  schema_before.json
tests/unit/: test_classifier.py  test_comparator.py  test_decision.py  test_driftbrake.py  test_policy.py  test_type_compatibility.py
(+2 files in other folders)
